updated remaining wrt external comments

--- a/thesis/Ch2-AnalyticalFw/Chapter2.tex
+++ b/thesis/Ch2-AnalyticalFw/Chapter2.tex
@@ -60,7 +60,7 @@ This visualization demonstrates that the choice of tile dimensions plays a cruci
 	\subfloat[]{\includegraphics[width=0.4\textwidth]{impactOfTileDims.pdf}
 		\label{fig:maxNMinLayerAccess}}
 	\hfil	
-	\caption{Impact of tile dimensions on off-chip memory accesses (a) off-chip memory access variation in a convolution layer when using tiles of different dimensions, x-axis represents the subset of valid tiles of the layer (b) Impact of good and bad tile dimensions on different convolution layers of VGG16.}
+	\caption{Impact of tile dimensions on off-chip memory accesses (a) off-chip memory access variations of a single convolution layer input data when accessing with tiles of different dimensions, x-axis represents a subset of valid tile space of the layer (b) Impact of good and bad tile dimensions on different convolution layers of VGG16.}
 	\label{fig:impactOfTileDims}
 \end{figure}
 
