--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -830,3 +830,53 @@
 	pages = {45–54},
 	series = {FPGA '17}
 }	
+
+@article{tamayo1999interpreting,
+	title={Interpreting patterns of gene expression with self-organizing maps: methods and application to hematopoietic differentiation},
+	author={Tamayo, Pablo and Slonim, Donna and Mesirov, Jill and Zhu, Qing and Kitareewan, Sutisak and Dmitrovsky, Ethan and Lander, Eric S and Golub, Todd R},
+	journal={Proceedings of the National Academy of Sciences},
+	volume={96},
+	number={6},
+	pages={2907--2912},
+	year={1999},
+	publisher={National Acad Sciences}
+}
+@article{abe2009novel,
+	title={Novel bioinformatics for inter-and intraspecies comparison of genome signatures in plant genomes},
+	author={Abe, Takashi and Wada, Kennosuke and Iwasaki, Yuki and Ikemura, Toshimichi},
+	journal={Plant biotechnology},
+	volume={26},
+	number={5},
+	pages={469--477},
+	year={2009},
+	publisher={Japanese Society for Plant Biotechnology}
+}
+@article{kohonen1990self,
+	title={The self-organizing map},
+	author={Kohonen, Teuvo},
+	journal={Proceedings of the IEEE},
+	volume={78},
+	number={9},
+	pages={1464--1480},
+	year={1990},
+	publisher={IEEE}
+}
+@article{gatherer2007genome,
+	title={Genome signatures, self-organizing maps and higher order phylogenies: A parametric analysis},
+	author={Gatherer, Derek},
+	journal={Evolutionary bioinformatics},
+	volume={3},
+	pages={117693430700300001},
+	year={2007},
+	publisher={SAGE Publications Sage UK: London, England}
+}
+@article{mortazavi2013integrating,
+	title={Integrating and mining the chromatin landscape of cell-type specificity using self-organizing maps},
+	author={Mortazavi, Ali and Pepke, Shirley and Jansen, Camden and Marinov, Georgi K and Ernst, Jason and Kellis, Manolis and Hardison, Ross C and Myers, Richard M and Wold, Barbara J},
+	journal={Genome research},
+	volume={23},
+	number={12},
+	pages={2136--2148},
+	year={2013},
+	publisher={Cold Spring Harbor Lab}
+}
