--- a/thesis/Ch5-SOM/Chapter5.tex
+++ b/thesis/Ch5-SOM/Chapter5.tex
@@ -4,7 +4,9 @@
 \label{chap:SOM}
 One of the prime reasons for NN's popularity in the last decade is their ability to detect patterns accurately. Compared to conventional solutions, they scale exceptionally well because of their inherent parallelism. The main strength of the NNs is their ability to learn the classification criteria directly from the input data. In essence, a NN trained with genomic data compresses its inputs and encodes it in its structure. The NN then can act as a predictor that can be queried about specific features in a given genome instead of attempting to output linear DNA sequences as done in the conventional assembly. In other words, NNs can invent an algorithm automatically that otherwise would have to be developed by bioinformatics engineers. The parameters of the networks define the algorithm as they are developed during its training. That also provides the possibility of re-training the network to update the identification features, such as mutations and other genomic alterations that were not known before, without changing the algorithm.
 
-Yang et al.~\cite{Yang2018RiBoSOM} has introduced Self-organizing maps (SOM) for rapid genome identification. SOM uses a type of unsupervised learning called the competitive ANN learning model. The model reduces the data dimensions, and it clusters similar data together \cite{Kohonen2013}. A trained SOM network does not require going through the whole DNA sequence to recognize the pathogen but only requires a small part of its DNA. SOM can be highly parallelized, and such parallel implementation has been proposed for synchronous VLSI design~\cite{Yang2018RiBoSOM}, custom FPGA~\cite{Porrmann2006} and GPUs~\cite{McConnell2012}. Another important aspect of SOM and other NNs is their robustness. NNs work satisfactorily well with low bit resolution without sacrificing much of their accuracy~\cite{8056820}. In this work, we explore the limits of the SOM using different bit resolutions and the effect that bit resolutions have on the accuracy of the SOM, as well as the benefits that this low resolution can provide for a hardware architecture. 
+Yang et al.~\cite{Yang2018RiBoSOM} has introduced Self-organizing maps (SOM) for rapid genome identification. SOM uses a type of unsupervised learning called the competitive ANN learning model. The model reduces the data dimensions, and it clusters similar data together \cite{Kohonen2013}. Self-Organizing Maps (SOMs) are good at capturing intricate patterns in complex data. Previous research~\cite{tamayo1999interpreting, abe2009novel, mortazavi2013integrating, kohonen1990self, gatherer2007genome} has leveraged SOMs to extract patterns from gene data. Tamayo et al.~\cite{tamayo1999interpreting} specifically utilized SOM to infer gene expression patterns, whereas Abe et al.~\cite{abe2009novel} applied Batch-Learning Self-organized Maps to identify differences in plant genomes. SOM projects multi-dimensional data onto a lower-dimensional surface~\cite{kohonen1990self}. The impact of the SOM training phase on output map accuracy was analyzed by Gatherer~\cite{gatherer2007genome} and Mortazavi et al.~\cite{mortazavi2013integrating} introduced a refined SOM, demonstrating successful mining of diverse genomic data.
+
+A trained SOM network does not require going through the whole DNA sequence to recognize the pathogen but only requires a small part of its DNA. SOM can be highly parallelized, and such parallel implementation has been proposed for synchronous VLSI design~\cite{Yang2018RiBoSOM}, custom FPGA~\cite{Porrmann2006} and GPUs~\cite{McConnell2012}. Another important aspect of SOM and other NNs is their robustness. NNs work satisfactorily well with low bit resolution without sacrificing much of their accuracy~\cite{8056820}. In this work, we explore the limits of the SOM using different bit resolutions and the effect that bit resolutions have on the accuracy of the SOM, as well as the benefits that this low resolution can provide for a hardware architecture. 
 
 \section{Introduction}
 An emerging design paradigm that can achieve better energy efficiency by trading off the quality (e.g., accuracy) and effort (e.g., energy) of computation is approximate computing~\cite{Zhang2014}. Many modern applications, such as machine learning and signal processing, can produce results with acceptable quality despite most of the calculations being computed imprecisely~\cite{Ye2013}. The tolerance of imprecise computation in approximate computing to acquire substantial performance gains is the basis for a wide range of architectural innovations~\cite{Esmaeilzadeh2012}. It has been demonstrated that high-precision computations are often unnecessary in the presence of statistical algorithms~\cite{Moons2017,Zhang2015}. Zhang et.al.~\cite{Zhang2015} report less than 5\% of quality loss obtained by simulation of the real hardware implemented in a 45nm CMOS technology.
