--- a/thesis/Ch3-CNN/Chapter3.tex
+++ b/thesis/Ch3-CNN/Chapter3.tex
@@ -103,19 +103,19 @@ CNN's layers have varying shapes. \figref{fig:ParamsNactProp} shows the paramete
 \end{figure}
 \section{Related Work}
 %Zhang et al.~\cite{zhang2015optimizing} used loop tiling to optimize the off-chip memory accesses. They expressed the off-chip memory access as a function of tile dimensions and layer shape and determined optimal tile dimensions by enumerating all the legal tile dimensions. They determined a global optimal tile dimension to reduce the hardware design complexity and used a common data reuse scheme for all the layers. Due to varying layer shapes, the optimal tile dimension and data-reuse scheme for different layers vary. To overcome this, Li et al.~\cite{Li2018SmartShuttleOO} proposed a layer-wise adaptive data partitioning and scheduling scheme. However, their approach ignored the architectural parameters and address alignment and assumed that all tiles of the same dimensions have the same off-chip memory accesses. With this assumption, the tile dimensions determined by their approaches are suboptimal.
-Several studies (\cite{Li2018SmartShuttleOO, zhang2015optimizing, 7092377, MaYufei, 7302332, 7428073, 6657019}) have addressed the substantial impact of data transfer on the performance and energy efficiency of DNN accelerators. These works aimed to optimize off-chip memory accesses through techniques such as loop ordering and loop tiling.
+Several studies (\cite{Li2018SmartShuttleOO, zhang2015optimizing, 7092377, MaYufei, 7302332, 7428073, 6657019}) have addressed the substantial impact of data transfer on the performance and energy efficiency of DNN accelerators. These works aimed to optimize off-chip memory accesses through loop ordering and tiling techniques.
 
-Peeman et al.~\cite{7092377} presented an analytical method to optimize the convolution nested loops for inter-tile data reuse using loop transformations. Inter-tile reuse scheme proposed by them creates the dependencies between the tiles and reduces the inter-tile parallelism. Ma et al.~\cite{MaYufei}, opted to ignore tile overlap, utilizing a fixed loop ordering and loop tiling scheme. They stored the full depth of $ifm$ tiles to minimize partial sum access from off-chip memory, but this approach may not scale for layers with numerous feature maps.
+Peeman et al.~\cite{7092377} presented an analytical method to optimize the convolution nested loops for inter-tile data reuse using loop transformations. The inter-tile reuse scheme they proposed creates dependencies between the tiles and reduces the inter-tile parallelism. Ma et al.~\cite{MaYufei} ignored tile overlap, utilizing a fixed loop ordering and loop tiling scheme. They stored the full depth of $ifm$ tiles to minimize partial sum access from off-chip memory, but this approach may not scale for layers with numerous feature maps.
  
-Shi et al.~\cite{7302332} proposed intra-output feature map parallelism to leverage data locality, aiming to reduce off-chip DRAM accesses by reusing data from on-chip buffers. However, their design has limitations, including the use of separate buffers for input and output feature maps, reducing flexibility. Additionally, their analysis focused solely on height and width tile dimensions, employing a fixed loop ordering and tiling scheme that may not be optimal for various layer shapes in CNNs. 
+Shi et al.~\cite{7302332} proposed intra-output feature map parallelism to leverage data locality, aiming to reduce off-chip DRAM accesses by reusing data from on-chip buffers. However, their design has limitations, including using separate buffers for input and output feature maps, reducing flexibility. Additionally, their analysis focused solely on height and width tile dimensions, employing a fixed loop ordering and tiling scheme that may not be optimal for various layer shapes in CNNs. 
 
-Zhang et al.~\cite{zhang2015optimizing} expressed off-chip memory access as a function of tile dimensions and layer shape, determining optimal tile dimensions by enumerating legal options. They sought a global optimal tile dimension to simplify hardware design, utilizing a common data reuse scheme for all layers. However, due to varying layer shapes, the optimal tile dimensions and data-reuse schemes differ across layers.
+Zhang et al.~\cite{zhang2015optimizing} expressed off-chip memory access as a function of tile dimensions and layer shape, determining optimal tile dimensions by enumerating legal options. They sought a global optimal tile dimension to simplify hardware design, utilizing a common data reuse scheme for all layers. However, the optimal tile dimensions and data-reuse schemes differ across layers due to varying layer shapes.
 
-Motamedi et al.~\cite{7428073} considered the impact of adaptive tiling and demonstrated its superior performance compared to static solutions. However, their adaptive tiling was limited to height and width dimensions of feature maps.
+Motamedi et al.~\cite{7428073} considered the impact of adaptive tiling and demonstrated its superior performance compared to static solutions. However, their adaptive tiling was limited to feature maps' height and width dimensions.
 
 The closest approach to ours is the layer-wise adaptive data partitioning and scheduling scheme by Li et al.~\cite{Li2018SmartShuttleOO}. Nevertheless, their method overlooked architectural parameters and address alignment, assuming identical off-chip memory accesses for tiles of the same dimensions. This assumption may lead to suboptimal tile dimensions in their approach.
 
-Our approach considers an adaptive strategy for loop tiling and loop orderding for all the layers, analyzing the impact of architectural parameters on off-chip memory access. We use this information to determine optimal tile dimensions and data reuse scheme, aiming to reduce off-chip memory accesses for different layers of CNNs.
+Our approach considers an adaptive strategy for loop tiling and loop ordering for all the layers, analyzing the impact of architectural parameters on off-chip memory access. We use this information to determine optimal tile dimensions and data reuse scheme, aiming to reduce off-chip memory accesses for different layers of CNNs.
 
 \section{Off-Chip Memory Accesses of CNN Layers}\label{MemAccess_CNN}
 %\subsection{Off-chip memory access of CL}\label{sec:AccessCLData}
@@ -243,15 +243,15 @@ where $V_i, V_o, \text{and }V_w$ are the sizes of \textit{ifm, ofm}, and \textit
 		&0<T_{n_i}\leq N_i,~\ 0<T_{m_o}\leq M_o
 	\end{split}
 \end{align}
-Determining the tile dimensions which minimize the off-chip memory accesses, expressed by \eqref{eq:TotalOffChipAccess}, is a constraint optimization problem. The  number of bytes accessed from off-chip memory using j$^{th}$ reuse scheme $\numBytesOffChip_j$ (~\eqref{eq:TotalOffChipAccess}) and the constraints (~\eqref{eq:onChipConstraint}) are non-linear functions of four variables $\langle T_{c_o},T_{r_o},T_{n_i},T_{m_o}\rangle$, and thus solving it is non-trivial.
+Determining the tile dimensions which minimize the off-chip memory accesses, expressed by \eqref{eq:TotalOffChipAccess}, is a constraint optimization problem. The number of bytes accessed from off-chip memory using j$^{th}$ reuse scheme $\numBytesOffChip_j$ (~\eqref{eq:TotalOffChipAccess}) and the constraints (~\eqref{eq:onChipConstraint}) are non-linear functions of four variables $\langle T_{c_o},T_{r_o},T_{n_i},T_{m_o}\rangle$, and thus solving it is non-trivial.
 \subsection{Off-chip memory access of FCL}\label{sec:AccessFCLData}
 The computations of FCLs are a special case of CLs with additional constraints on layer shapes and parameters. The \textit{ifm} volume is same as a filter volume i.e., $H_i{=}W_i{=}K$, padding $P{=}0$, and stride $S{=}1$. In CNNs, typical values of K are 1, 3, 5, 7, and 11. Due to small values of $H_i$ and $W_i$, these dimensions are not partitioned ($T_{r_i}{=}T_{c_i}{=}K$). \textit{ofm} layer shape and tile dimensions computed using ~\eqref{eq:ofmAndifmTileDims} are $\langle 1,1,M_o\rangle$ and $\langle 1,1,T_{m_o}\rangle$.
 
-For FCLs, the trips count of different data reuse schemes can be computed using~\eqref{eq:TripCount} and the number of bytes accessed from off-chip memory ($\numBytesOffChip^{FC}$) using~\eqref{eq:TotalOffChipAccess} by applying the layer shape constraints. The constraints on tile dimensions are given by~\eqref{eq:onChipConstraint}. $T_{n_i}$ and $T_{m_o}$ are the unknowns to be determined in~\eqref{eq:TotalOffChipAccess}. Determining the optimal tile dimensions for FCLs is a constraint optimization problem similar to CL.
+For FCLs, the trip count of different data reuse schemes can be computed using~\eqref{eq:TripCount} and the number of bytes accessed from off-chip memory ($\numBytesOffChip^{FC}$) using~\eqref{eq:TotalOffChipAccess} by applying the layer shape constraints. The constraints on tile dimensions are given by~\eqref{eq:onChipConstraint}. $T_{n_i}$ and $T_{m_o}$ are the unknowns to be determined in~\eqref{eq:TotalOffChipAccess}. Determining the optimal tile dimensions for FCLs is a constraint optimization problem similar to CL.
 \section{Implementation and Results}
 \subsection{Implementation}
 The optimal tile dimensions need to be determined once for a given NN and accelerator architecture, before the inference phase on edge devices. It can be determined by computing the number of bytes accessed from off-chip memory ($\numBytesOffChip$) at all the feasible points in the solution space. 
-We have developed a tool that determines the optimal tile dimensions of each NN layer during the \emph{Preprocessing and Optimization} phase before the inference phase (~\figref{fig:workFlow} of~\chapref{chap:introduction}). The tool first prunes the large search space of tiles by applying the constraints (~\eqref{eq:onChipConstraint}). It then computes $\numBytesOffChip$ using \eqref{eq:TotalOffChipAccess} for each tile in the pruned search space and determines the optimal tile dimensions. The optimal tile dimension is determined for all the CL and FC layers of the NN. The tool also analyses the $\numBytesOffChip$ for different data reuse schemes to suggest the best scheme for each CL. It can be configured for different on-chip memory sizes, bus widths, and data bit widths. It took few minutes to determine the optimal solution for VGG16 on Intel Core i7-6700 CPU (@3.40GHz$\times$8).
+We have developed a tool that determines the optimal tile dimensions of each NN layer during the \emph{Preprocessing and Optimization} phase before the inference phase (~\figref{fig:workFlow} of~\chapref{chap:introduction}). The tool first prunes the large search space of tiles by applying the constraints (~\eqref{eq:onChipConstraint}). It then computes $\numBytesOffChip$ using \eqref{eq:TotalOffChipAccess} for each tile in the pruned search space and determines the optimal tile dimensions. The optimal tile dimension is determined for all the CL and FC layers of the NN. The tool also analyses the $\numBytesOffChip$ for different data reuse schemes to suggest the best scheme for each CL. It can be configured for different on-chip memory sizes, bus widths, and data bit widths. It took less than 10 minutes to determine the optimal solution for VGG16 on an Intel Core i7-6700 CPU (@3.40GHz$\times$8).
 \subsection{Validation}\label{Validation}
 We have validated the number of bytes accessed from off-chip memory computed by BWA (~\algref{Algorithm1} of~\chapref{chap:analyticalFw}) using the hardware implementation of CNN layers on Xilinx FPGA. We have implemented CNN layers using the Xilinx SDSoC framework, SDx v2018.3, which generates hardware functions from high-level languages like C/C++. We used the SDx pragmas to use zero\_copy as a data mover. The Xilinx tools allow integrating the AXI Performance Monitor (APM) IP~\cite{APM}, which captures the real-time performance metrics like bus latency and amount of memory traffic for connected AXI interfaces. The target platform is ZedBoard, working at 100MHz frequency, and off-chip memory (DRAM) is accessed using 64 bits AXI bus. 
 Our FPGA implementation takes the 3D shape and tile dimensions as input, and the generated hardware functions access the 3D data from DRAM using loop tiling. The integrated APM IP logs the number of bytes and latency of off-chip memory access transactions using which we validated the number of bytes accessed from off-chip memory computed by our approach for different 3D data shapes and tile dimensions.
