--- a/thesis/Ch6-Conclusion/Chapter6.tex
+++ b/thesis/Ch6-Conclusion/Chapter6.tex
@@ -1,4 +1,4 @@
-\chapter{Conclusion And Future Directions} \label{chap:Conclusion}
+G\chapter{Conclusion And Future Directions} \label{chap:Conclusion}
 \begin{comment}
 \section{Recapitulation of Research Objectives}
 The primary aim of this research was to enhance the energy efficiency and throughput of Neural Network (NN) accelerators by minimizing off-chip memory accesses. This thesis explored various data reuse techniques for different types of NNs, including Self Organizing Maps (SOMs), Convolutional Neural Networks (CNNs), and Recurrent Neural Networks (RNNs). Additionally, an analytical framework was developed to quantify off-chip memory accesses, taking into account the architectural constraints, and to compare different data partitioning and scheduling schemes for optimizing NN performance on parallel architectures.
@@ -65,7 +65,7 @@ Moreover, addressing the challenges posed by data reuse in more complex and deep
 Future research in genome identification using Self-Organizing Maps (SOMs) could benefit from two key strategies. First, exploring a co-training approach—simultaneously training multiple SOM models on the same dataset—may enhance the model's ability to learn complex genomic patterns. Second, considering weight initialization, using techniques like Principal Component Analysis (PCA) could offer a more informed start for the model, potentially improving its accuracy. These future directions aim to refine SOM training, leading to more accurate and efficient genome identification.
 
 \section{Closing Remarks}
-In conclusion, this thesis has contributed to the state-of-the-art in energy-efficient execution of modern NNs on parallel architectures. The proposed data reuse approaches and partitioning strategies have significantly improved energy efficiency and throughput for various NN layers. The analytical framework developed in this research provides a valuable tool for comparing different data reuse and scheduling schemes and exploring the design space for optimal solutions.
+In conclusion, this thesis has contributed to the state-of-the-art energy-efficient execution of modern NNs on parallel architectures. The proposed data reuse approaches and partitioning strategies have significantly improved energy efficiency and throughput for various NN layers. The analytical framework developed in this research provides a valuable tool for comparing different data reuse and scheduling schemes and exploring the design space for optimal solutions.
 
 The work presented here not only advances the field of NN accelerators but also opens up new research directions for integrating modern AI models into energy-constrained systems. By focusing on efficient data reuse, hardware co-design, and innovative quantization techniques, future researchers can continue to push the boundaries of NN performance on parallel architectures.
 \section{Conclusion}
