--- a/thesis/Ch2-AnalyticalFw/Chapter2.tex
+++ b/thesis/Ch2-AnalyticalFw/Chapter2.tex
@@ -47,7 +47,7 @@ The NN accelerator reads the input data (or input activations), filter weights, 
 
 The layer data is stored as multi-dimensional arrays in the off-chip memory, which is generally too large to fit in the local on-chip memory. In order to perform the computations, the large layer data is partitioned into small tiles. These tiles are repeatedly fetched from the off-chip memory to compute the final output sum. 
 
-To observe the impact of tile dimensions on off-chip memory accesses for a given data reuse scheme, we measured the off-chip memory accesses for a popular CNN, VGG16, for different tile dimensions using the algorithm described in \secref{sec:Access3DData}. \figref{fig:impactOfTileDims} illustrates the impact of tile dimensions on off-chip memory accesses for VGG16. Meanwhile, \figref{fig:varyingTileDims} provides a closer look at the significant variations in off-chip memory accesses within a single layer when different tile dimensions are chosen. On the x-axis, we represent a subset of the valid tile search space for the layer, while the y-axis indicates the corresponding off-chip memory access for the selected tile dimensions.
+To observe the impact of tile dimensions on off-chip memory accesses for a given data reuse scheme, we measured the off-chip memory accesses for a popular CNN, VGG16, for different tile dimensions using the algorithm described in \secref{sec:Access3DData}. \figref{fig:impactOfTileDims} illustrates the impact of tile dimensions on off-chip memory accesses for VGG16. Meanwhile, \figref{fig:varyingTileDims} provides a closer look at the significant variations in off-chip memory accesses within a single layer when tiles of different dimensions are chosen. On the x-axis, we represent a subset of the valid tile search space for the layer, while the y-axis indicates the corresponding off-chip memory access for the selected tile dimensions.
 
 This visualization demonstrates that the choice of tile dimensions plays a crucial role in determining off-chip memory accesses. A well-selected tile dimension can result in a substantial reduction, up to 90\%, in off-chip memory accesses compared to a poorly chosen tile dimension. This observation is further supported by \figref{fig:maxNMinLayerAccess}, which showcases the computed values for different layers of VGG16. The depicted variations emphasize the importance of optimizing tile dimensions to enhance overall system efficiency and minimize off-chip memory access overhead.
 
@@ -201,9 +201,9 @@ The function GetTileAcc in Lines~\ref{alg:FuncTileAccess}--\ref{alg:FuncTileAcce
 DNN accelerators access layer data (ifm, ofm, and weights) partitioned into tiles. The tile dimensions should be chosen carefully to minimize the transfer of extra bytes to reduce off-chip memory access. We have proposed a bus width aware approach (BWA) that factors in the architectural parameters to precisely compute the off-chip memory access of 3D tiles and the layer data.
 
 \section{Implementation and Results}
-We've implemented a tool that calculates off-chip memory access for 3D data using the BWA algorithm (~\algref{Algorithm1}). This tool, which considers tile dimensions, layer shape, and the count of overlapping elements as inputs, is adaptable for different bus widths and data bit widths. Executed on a desktop machine, the tool quickly analyzes off-chip memory accesses for various tile dimensions. It seamlessly integrates with our analytical framework, estimating off-chip memory accesses, latencies and data movement energies of different NN layers across.
+We have implemented a tool that calculates off-chip memory access for 3D data using the BWA algorithm (~\algref{Algorithm1}). This tool considers tile dimensions, layer shape, and the count of overlapping elements as inputs and is adaptable for different bus widths and data bit widths. Executed on a desktop machine, the tool quickly analyzes off-chip memory accesses for various tile dimensions. It seamlessly integrates with our analytical framework, estimating different NN layers' off-chip memory accesses, latencies, and data movement energies.
 
-Validation of the off-chip memory access calculations of the tool was conducted by accessing the same shape of 3D data and using the same tile dimensions on a Xilinx FPGA. FPGA implementation was done using the Xilinx SDSoC framework, SDx v2018.3. The FPGA implementation utilized SDx pragmas for zero\_copy data movement and integrated the AXI Performance Monitor (APM) IP~\cite{APM} for real-time performance metrics, including bus latency and memory traffic. Executed on the ZedBoard platform at a 100MHz frequency, the off-chip memory (DRAM) was accessed using a 64-bit AXI bus. The FPGA implementation, taking 3D shape and tile dimensions as inputs, accessed 3D data from DRAM using loop tiling. Validation was performed by comparing the tool's calculated off-chip memory bytes with the APM-logged values for various 3D data shapes and tile dimensions.
+Validation of the off-chip memory access calculations of the tool was conducted by accessing the same shape of 3D data and using the same tile dimensions on a Xilinx FPGA. FPGA implementation was done using the Xilinx SDSoC framework, SDx v2018.3. The FPGA implementation utilized SDx pragmas for zero\_copy data movement and integrated the AXI Performance Monitor (APM) IP~\cite{APM} for real-time performance metrics, including bus latency and memory traffic. Executed on the ZedBoard platform at 100MHz, the off-chip memory (DRAM) was accessed using a 64-bit AXI bus. The FPGA implementation, taking 3D shape and tile dimensions as inputs, accesses 3D data from DRAM using loop tiling. Validation was performed by comparing the tool's calculated off-chip memory bytes with the APM-logged values for various 3D data shapes and tile dimensions.
 \subsection{Results}
 \figref{fig:measVsEst} illustrates the comparison between off-chip memory accesses computed by the analytical framework and measurements obtained on a Xilinx FPGA. For various layers of different shapes and sizes in the popular CNN, VGG16, reveal that the variation between off-chip memory accesses calculated by the analytical framework and the measured values on FPGA is consistently less than 4\%.  
 
