--- a/thesis/Ch5-SOM/Chapter5.tex
+++ b/thesis/Ch5-SOM/Chapter5.tex
@@ -1,6 +1,6 @@
 \graphicspath{{./Ch5-SOM/images/}}
 
-\chapter[Performance Improvement of SOM by using Low Bit-Width Resolution]{Performance Improvement of SOM by using Low Bit-Width Resolution \footnote{The experiments in this chapter involved joint efforts with other students at KTH Royal Institute of Technology, Sweden. Specifically, some parts of the research utilized measurement data obtained by these collaborators.}} 
+\chapter[Performance Improvement of SOM by using Low Bit-Width Resolution]{Performance Improvement of SOM by using Low Bit-Width Resolution \footnote{The experiments in this chapter involved joint efforts with other students at KTH Royal Institute of Technology, Sweden~\cite{Yang2018RiBoSOM}. Specifically, some parts of the research utilized measurement data obtained by these collaborators.}} 
 \label{chap:SOM}
 One of the prime reasons for NN's popularity in the last decade is their ability to detect patterns accurately. Compared to conventional solutions, they scale exceptionally well because of their inherent parallelism. The main strength of the NNs is their ability to learn the classification criteria directly from the input data. In essence, a NN trained with genomic data compresses its inputs and encodes it in its structure. The NN then can act as a predictor that can be queried about specific features in a given genome instead of attempting to output linear DNA sequences as done in the conventional assembly. In other words, NNs can invent an algorithm automatically that otherwise would have to be developed by bioinformatics engineers. The parameters of the networks define the algorithm as they are developed during its training. That also provides the possibility of re-training the network to update the identification features, such as mutations and other genomic alterations that were not known before, without changing the algorithm.
 
@@ -19,7 +19,7 @@ We present a design space exploration of a self-organizing map (SOM) to analyze 
 \section{Background}
 In this section, we briefly introduce the SOM algorithm \cite{Yang2018RiBoSOM}, which has been used to recognize bacterial genomes.
 
-As shown in \figurename{~ \ref{fig:algorithm}}, a SOM network is organized in a circle to match genomic data better ~\cite{Yang2018RiBoSOM}. SOM networks are typically used as 2D arrays when dealing with data that have clear boundaries or start-and-stop conditions. However, for genomic data, especially circular bacterial genomes, it's more accurately represented as a continuous stream without a distinct beginning or end. To prevent any issues from edge effects when presenting data in smaller pieces to the SOM, a circular structure is chosen by Yang et al.~\cite{Yang2018RiBoSOM}. 
+As shown in \figurename{~ \ref{fig:algorithm}}, a SOM network is organized in a circle to match genomic data better ~\cite{Yang2018RiBoSOM}. SOM networks are typically used as 2D arrays when dealing with data with clear boundaries or start-and-stop conditions. However, genomic data, mainly circular bacterial genomes, is more accurately represented as a continuous stream without a distinct beginning or end. To prevent any issues from edge effects when presenting data in smaller pieces to the SOM, a circular structure is chosen by Yang et al.~\cite{Yang2018RiBoSOM}. 
 
 Let us consider a SOM network with $N$ neurons. Each neuron has a weight vector that has the same size as the training vector. Let us assume it to be $M$. Therefore, the weight matrix ($W$) for the SOM network would have $M{\times}N$ weights. The weight vector of $j^{th}$ neuron is shown as $\Bigl[ w_{1,j},w_{2,j},\ldots,w_{M,j}\Bigr]$ in \figurename{~ \ref{fig:algorithm}}. Each element in the input vectors represents one of the four nucleotides ($C,G,T \text{or} A$). Let us assume the input sequence ($IS$), is a group of $S$ input vectors ($I_1, I_2,...,\text{and}~I_S$). During training and inference, the distance of the input vectors from each neuron is calculated, shown using arrows in \figurename{~ \ref{fig:algorithm}}.
 \begin{figure}[htb]
