--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -251,7 +251,7 @@
 \doublespacing
 \pagestyle{empty}
 \cleardoublepage
-\newpage \ \newpage
+%\newpage \ \newpage
 %\onehalfspacing 
 %\newpage \ \newpage
 %------------------------------------------------------------------------- 
