--- a/thesis/Ch4-RNN/Chapter4.tex
+++ b/thesis/Ch4-RNN/Chapter4.tex
@@ -185,7 +185,7 @@ We have implemented LSTM layers using the conventional, TSIWR~\cite{park2020time
 
 The design can be configured for different on-chip buffer sizes, hidden units ($N$), and compute resources. We have implemented multiple designs for each of the three approaches to compare the throughput for different numbers of compute resources and buffer sizes. We carried out the experiments on Zedboard, and the target frequency is 100MHz. The off-chip memory is DDR3 connected using a 64-bit AXI bus. We have integrated the Xilinx AXI Performance Monitor (APM) IP to log the number of bytes transferred and memory access latencies for DRAM accesses.
 
-There are eight local buffers each to store the $B{\times}B$ elements of the matrices (\figurename{~\ref{fig:lstmFpgaDesign}}), and two buffers, each of dimension $N$, for storing the vector $h_t$ and $h_{t{+}1}$. For TSIWR and our approach, additonal on-chip storage of size $4{\times}N$ is required to store the partial sums of next time steps compared to conventional approach. Since the partial sums are stored in the on-chip memory, there is no additional impact on the latency compared to the conventional approaches. Table~\ref{tab:fpgaResources} shows the FPGA resources utilization reported by Vivado for conventional, TSIWR, and our approach, for $B{=}64$ and using 8 DSPs resources ($PARL\_FACTOR{=}8$) in each of the four $M{\times}V$ component. In this case, the total number of DSPs required is $4{\times}PARL\_FACTOR{=}32$.
+There are eight local buffers each to store the $B{\times}B$ elements of the matrices (\figurename{~\ref{fig:lstmFpgaDesign}}), and two buffers, each of dimension $N$, for storing the vector $h_t$ and $h_{t{+}1}$. For TSIWR and our approach, additional on-chip storage of size $4{\times}N$ is required to store the partial sums of next time steps compared to the conventional approach. Since the partial sums are stored in the on-chip memory, there is no additional impact on the latency compared to the conventional approaches. Table~\ref{tab:fpgaResources} shows the FPGA resources utilization reported by Vivado for conventional, TSIWR, and our approach, for $B{=}64$ and using 8 DSPs resources ($PARL\_FACTOR{=}8$) in each of the four $M{\times}V$ component. In this case, the total number of DSPs required is $4{\times}PARL\_FACTOR{=}32$.
 Each of the eight arrays is partitioned into 8 ($PARL\_FACTOR$) to provide the data to compute resources. That results in 64 FPGA RAMB18 resources for storing the $B{\times}B$ blocks and 2 FPGA RAMB18 resources for storing the vector $h_t$ and $h_{t{+}1}$. The remaining RAMB18 blocks are used for other logic and vary for the three approaches. The conventional approach has the most straightforward control logic than TSIWR and our approach. The LUTs and FFs in the case of TSIWR and our approach are higher than the conventional approach. 
 \begin{table}[htb]
 	\centering
